<resources>
    <string name="app_name">TezGame</string>
    <string name="welcome_to_tezgame">Welcome to TezGame!</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="start">Start</string>
    <string name="ghost">Ghost:</string>
    <string name="lose_game">Lose Game</string>
    <string name="win_game">Win Game</string>
    <string name="white_ghost">White Ghost</string>
    <string name="red_ghost">Red Ghost</string>
    <string name="blue_ghost">Blue Ghost</string>
    <string name="difficulty">Difficulty</string>
    <string name="scavenger">Scavenger</string>
    <string name="assassin">Assassin</string>
    <string name="hunter">Hunter</string>

    <string-array name="difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>