<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTezGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_tezgame"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:columnCount="2"
        android:gravity="start"
        android:orientation="horizontal"
        android:padding="5sp"
        android:rowCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTezGame">


        <Button
            android:layout_row="0"
            android:id="@+id/startButton"
            android:layout_column="0"
            android:text="@string/start" />

        <Button
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/menu" />

        <Button
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/settings" />


    </GridLayout>

    <ImageView
        android:id="@+id/ghostPic"
        android:layout_width="124sp"
        android:layout_height="129sp"
        android:layout_marginTop="76dp"
        android:src="@drawable/ghost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toEndOf="@+id/gridLayout"
        app:layout_constraintTop_toBottomOf="@+id/tvTezGame" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="4sp"
        android:background="@drawable/username_background"
        android:hint="@string/enter_your_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <TextView
        android:id="@+id/ghostNameTV"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ghost"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTezGame" />

    <Button
        android:id="@+id/hunterbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Psychic"
        app:layout_constraintEnd_toStartOf="@+id/scavengerbt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scavengerbt" />

    <Button
        android:id="@+id/scavengerbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Charmer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <Button
        android:id="@+id/assassinbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sweetener"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/scavengerbt"
        app:layout_constraintTop_toTopOf="@+id/scavengerbt" />

    <RelativeLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scavengerbt" />

    <TextView
        android:id="@+id/hsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Highscore: "
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ghostPic" />

    <TextView
        android:id="@+id/highTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" ?"
        android:textColor="@color/red"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/hsTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toEndOf="@+id/hsTV" />

</androidx.constraintlayout.widget.ConstraintLayout>